--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Testing Title</title>
+<title>SPACE</title>
 <meta charset="utf-8">
 <meta name="viewport"
 content="width=device-width, initial-scale=1.0">
@@ -14,15 +14,16 @@ content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+ 
  <div id="wrapper">
 
-  <!-- Logo image -->
+  <!-- Logo image 
   <header role="banner">
     <img src="images/logo.png" class="desktop" width="400" height="200" alt="Testing Logo">
 	<img src="images/logo_sm.png" class="mobile" width="200" height="100" alt="Testing Logo">
-  </header>
+  </header> -->
   
-  <!--  Navigation -->
+  <!--  Navigation 
   <nav role="navigation">
    <ul class="navfade">
     <li><a href="index.html">HOME</a></li>
@@ -31,20 +32,21 @@ content="width=device-width, initial-scale=1.0">
     <li><a href="page3.html">Page 3</a></li>
     <li><a href="page4.html">Page 4</a></li>
    </ul>
-  </nav>
+  </nav> -->
  
-  <!-- Splash image -->
+  <!-- Splash image 
   <div id="splash_home"></div>
+  -->
  
   <!-- reference the ID by linking to #content -->
   <main id="content" role="main">
   
-   <p class="justified">"Lorem ipsum dolor sit amet"</p><br>
+   <p class="justified">"Hello world, this is my website"</p><br>
    <div class="centered">
       <strong>Test Test</strong>, <em>Testing</em>
    </div>
 
-   <!-- Footer -->
+   <!-- Footer 
    <footer role="contentinfo">
     Test<br>
 	Address<br>
@@ -52,15 +54,18 @@ content="width=device-width, initial-scale=1.0">
 	<div class="mobile"><a href="tel:+17739293100">(111)111-1111</a><br></div>
 	<div class="desktop">(111)111-1111<br></div>
     
-	<!-- Social media icons -->
+	<!-- Social media icons 
     <div id="social">
      <ul>
       <li><a href="http://www.facebook.com" target="blank">&#xe227;</a></li>
       <li><a href="http://www.instagram.com" target="blank">&#xe300;</a></li>
       <li><a href="http://www.twitter.com" target="blank">&#xe286;</a></li>
      </ul>
-    </div>
+    </div> 
+	
    </footer>
+   -->
+   
   </main>
  
  </div> 
