--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>SPACE</title>
+<title>TEST</title>
 <meta charset="utf-8">
-<meta name="viewport"
-content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -17,26 +15,6 @@ content="width=device-width, initial-scale=1.0">
  
  <div id="wrapper">
 
-  <!-- Logo image 
-  <header role="banner">
-    <img src="images/logo.png" class="desktop" width="400" height="200" alt="Testing Logo">
-	<img src="images/logo_sm.png" class="mobile" width="200" height="100" alt="Testing Logo">
-  </header> -->
-  
-  <!--  Navigation 
-  <nav role="navigation">
-   <ul class="navfade">
-    <li><a href="index.html">HOME</a></li>
-    <li><a href="page1.html">PAGE 1</a></li>
-    <li><a href="page2.html">Page 2</a></li>
-    <li><a href="page3.html">Page 3</a></li>
-    <li><a href="page4.html">Page 4</a></li>
-   </ul>
-  </nav> -->
- 
-  <!-- Splash image 
-  <div id="splash_home"></div>
-  -->
  
   <!-- reference the ID by linking to #content -->
   <main id="content" role="main">
@@ -45,30 +23,11 @@ content="width=device-width, initial-scale=1.0">
    <div class="centered">
       <strong>Test Test</strong>, <em>Testing</em>
    </div>
-
-   <!-- Footer 
-   <footer role="contentinfo">
-    Test<br>
-	Address<br>
-	City, ST ZIP<br>
-	<div class="mobile"><a href="tel:+17739293100">(111)111-1111</a><br></div>
-	<div class="desktop">(111)111-1111<br></div>
-    
-	<!-- Social media icons 
-    <div id="social">
-     <ul>
-      <li><a href="http://www.facebook.com" target="blank">&#xe227;</a></li>
-      <li><a href="http://www.instagram.com" target="blank">&#xe300;</a></li>
-      <li><a href="http://www.twitter.com" target="blank">&#xe286;</a></li>
-     </ul>
-    </div> 
-	
-   </footer>
-   -->
    
   </main>
  
  </div> 
+ 
 </body>
 
 </html>
