--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>TEST</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="https://bskup.github.io/images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://bskup.github.io/images/favicon.ico" type="image/x-icon">
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
