--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>TEST</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" type="text/css"
+      href="https://fonts.googleapis.com/css?family=Galada|Roboto+Condensed">
 <link rel="icon" href="http://bskup.github.io/images/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="http://bskup.github.io/images/favicon.ico" type="image/x-icon">
 <!--[if lt IE 9]>
