--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <!-- reference the ID by linking to #content -->
   <main id="content" role="main">
   
-   <p class="justified">"Hello world, this is my website"</p><br>
+   <header><p class="justified">"Hello world, this is my website"</p></header>
+   <br>
    <div class="centered">
       <strong>Test Test</strong>, <em>Testing</em>
    </div>
