--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
   <!-- reference the ID by linking to #content -->
   <main id="content" role="main">
   
-   <header><p class="justified">"Hello world, this is my website"</p></header>
+   <header>"Hello world, this is my website"</header>
    <br>
-   <div class="centered">
-      <strong>Test Test</strong>, <em>Testing</em>
-   </div>
+   <strong>Test Test</strong>, <em>Testing</em>
    
   </main>
  
