--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <div id="wrapper">
    <br>
    <br>
-   <header>"Hello world, this is my website"</header>
+   <header>"Hello world, this is my testing website"</header>
    <br>
    <strong>Test Test</strong>, <em>Testing</em>
    <br>
