--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
  
    <br>
    <br>
-   <header>"Hello world, this is my testing website"</header>
-   <strong>Test Test</strong>, <em>Testing</em>
+   <div class="header">"Hello world, this is my testing website"</div>
+   <div class="subheader"><strong>Test Test</strong>, <em>Testing</em></div>
    <br>
    <br>
    <div class="circle"></div>
