--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
    <br>
    <div class="circle"></div>
    <div class="rect1"></div>
+   <div class="space3"></div>
+   <div class="rect1"></div>
+   <div class="space2"></div>
+   <div class="rect1"></div>
+   <div class="space1"></div>
+   <div class="rect1"></div>
  
  </div> 
  
