Ginventory Privacy Policy
Ginventory Privacy Policy

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,4 +1,6 @@
 <html>
+<title>Ginventory Privacy Policy</title>
+<body>
 Privacy-relevant Android permissions requested by this app<br>
 <br>
 CAMERA<br>
@@ -6,3 +8,5 @@ Used for permissions that are associated with accessing camera or capturing imag
 This permission allows the application to use the device's camera to capture images of inventory items. The images are stored locally on the device and are never sent anywhere or shared with anyone or anything.<br>
 <br>
 Updated May 27, 2017
+</body>
+</html>
