--- a/easytiles-privacypolicy.html
+++ b/easytiles-privacypolicy.html
@@ -4,10 +4,10 @@
 Android permissions requested by this app<br>
 <br>
 Do Not Disturb access<br>
-Used for controlling Do Not Disturb state via quick settings tile.<br>
+Used for controlling Do Not Disturb state via quick settings tiles.<br>
 <br>
 Write Settings access<br>
-Used for controlling screen brightness and screen timeout through quick settings tiles.
+Used for controlling screen brightness and screen timeout via quick settings tiles.<br>
 <br>
 Data collection, ads, etc.<br>
 NO data is collected by this app, no ads exist in this app, and no network calls are made by this app. The permissions requested are only used for their described purpose.<br>
